# ohtu-miniprojekti-2021

./: .coveragerc  .gitignore  Procfile  README.md  app.py  gh_actions_flask_robot.sh  pylintrc  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: main.yml  test.yml
src/: models.py  routes.py
src/tests/: home.robot  register.robot  resource.robot  signin.robot
static/: main.css
templates/: add_tips.html  index.html  layout.html  register.html  signin.html  user_page.html
tips_app/: __init__.py  models.py  routes.py  search.py
tips_app/static/: main.css
tips_app/templates/: add_tips.html  index.html  layout.html  register.html  signin.html  user_page.html
tips_app/tests/: add_tip_resource.robot  delete_tip_resource.robot  home.robot  register.robot  register_resource.robot  resource.robot  signin.robot  test_app.py  test_search.py  user_page.robot  user_resource.robot
